northladder-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: northladder-node
  name: northladder-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: northladder-node
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: northladder-node
    spec:
      containers:
      - image: northladder-assignment-node-server:latest
        name: north-node-app
        ports:
        - containerPort: 3000
        resources: {}
status: {}
