northladder-deploy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: northladder-node
  name: northladder-node
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: northladder-node
status:
  loadBalancer: {}
