ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: northladder-ingress
spec:
  rules:
  - host: "api.northladder.com"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: northladder-node
            port:
              number: 3000
